--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.544.0",
     "ogl": "^0.0.75",
     "postcss": "^8.5.6",
@@ -15,7 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^3.4.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
